--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,33 @@
+:root {
+  --text-dark: #454545;
+  --primary: #19a79a;
+  --line-faded: #e0e0e0;
+}
+p {
+  font-size: 14px;
+  color: var(--text-dark);
+}
+a {
+  font-size: 14px;
+  color: #0066cc;
+  text-decoration: none;
+}
+.default-bg,
+.bg-content {
+  height: 100%;
+}
 .default-bg {
   display: flex;
   position: relative;
-  height: 100%;
   background-color: #f7f9f9;
-  justify-content: center;
+}
+.bg-content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  /* justify-content: center; */
   align-items: center;
+  z-index: 999;
 }
 
 .bg-image-left,
@@ -24,8 +47,119 @@
 .card-sharp {
   background-color: #ffff;
   border: 1px solid #e0e0e0;
-  padding: 20px 40px;
+  padding: 0 40px;
   box-shadow: 2px 3px 4px 0px rgba(215, 212, 212, 0.75);
   -webkit-box-shadow: 2px 3px 4px 0px rgba(215, 212, 212, 0.75);
   -moz-box-shadow: 2px 3px 4px 0px rgba(215, 212, 212, 0.75);
+}
+
+.logo-text-center {
+  width: 90px;
+  height: 78px;
+  margin: 20px 0;
+}
+.manual-login {
+  width: 288px;
+}
+.button-default {
+  height: 50px;
+  width: 288px;
+  background-color: var(--primary);
+  border: 1px solid var(--primary);
+  border-radius: 100px;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+}
+.icon-button {
+  display: flex;
+  height: 50px;
+  width: 288px;
+  border-radius: 100px;
+  border: 1px solid var(--text-dark);
+  align-items: center;
+  padding: 0 40px;
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+.button-default:hover,
+.icon-button:hover {
+  opacity: 0.9;
+  transition: opacity 0.3s;
+}
+
+.icon-button-image {
+  width: 24px;
+  height: 24px;
+}
+
+.icon-button-label {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  margin-left: 20px;
+  line-height: 0;
+  color: var(--text-dark);
+}
+
+.content-center-h {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.heading-1 {
+  color: var(--text-dark);
+  font-size: 32px;
+  font-weight: bold;
+  margin: 20px 0;
+}
+
+.or-container {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.or-text-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid var(--line-faded);
+  border-radius: 50%;
+  font-size: 14;
+  margin: 15px 20px;
+}
+.or-text {
+  margin: 0;
+  line-height: 0;
+  color: var(--line-faded);
+}
+.or-line {
+  border-top: 1px solid var(--line-faded);
+  width: 56px;
+}
+.text-field-container {
+  margin-bottom: 16px;
+}
+.text-field-label {
+  color: #454545;
+}
+
+.text-field {
+  width: 100%;
+  height: 35px;
+  border: 1px solid var(--text-dark);
+  border-radius: 4px;
+  padding-left: 10px;
+  margin-top: 12px;
+}
+
+.para-center {
+  text-align: center;
 }
