--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ a {
   display: flex;
   position: relative;
   background-color: #f7f9f9;
+  overflow: hidden;
 }
 .bg-content {
   display: flex;
@@ -27,6 +28,7 @@ a {
   flex-direction: column;
   /* justify-content: center; */
   align-items: center;
+  overflow: auto;
   z-index: 999;
 }
 
@@ -162,4 +164,26 @@ a {
 
 .para-center {
   text-align: center;
+}
+nav.header-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+nav.header-nav li,
+img.logo-horizontal {
+  margin: 0 20px;
+}
+.nav-right {
+  display: flex;
+  list-style: none;
+  align-items: center;
+}
+img.user-avatar-header {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+}
+img.logo-horizontal {
+  width: 190px;
 }
