add social media button in sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -287,3 +287,27 @@ span.sb-link-label.active {
 .sidebar-link.active {
   background-color: var(--primary) !important;
 }
+
+.button {
+  background-color: var(--primary);
+  color: white;
+  font-size: 16px;
+  border: 1px solid var(--primary);
+  border-radius: 100px;
+  padding: 8px 15px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.button:hover {
+  opacity: 0.9;
+}
+.button-icon {
+  font-size: 14px;
+  margin-right: 10px;
+}
+.sb-btn {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
