--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   --primary: #19a79a;
   --line-faded: #e0e0e0;
 }
+.app-root {
+  position: relative;
+}
 body {
   color: #454545;
 }
@@ -310,4 +313,35 @@ span.sb-link-label.active {
   display: flex;
   width: 100%;
   justify-content: center;
+}
+.modal {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 9999;
+}
+.modal-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding-top: 15px;
+}
+.modal-close {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+}
+.card {
+  background-color: white;
+  border: 1 px solid white;
+  border-radius: 10px;
+}
+.card-body {
+  padding: 10px;
 }
