--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,7 @@
   --primary: #19a79a;
   --line-faded: #e0e0e0;
 }
-.app-root {
-  position: relative;
-}
+
 body {
   color: #454545;
 }
@@ -27,10 +25,12 @@ footer {
   width: 100%;
   display: flex;
   flex-direction: row;
+  align-items: center;
 
   background-color: white;
   border-top: 1px solid var(--line-faded);
 }
+
 p {
   font-size: 14px;
   color: var(--text-dark);
@@ -40,6 +40,10 @@ a {
   color: #0066cc;
   text-decoration: none;
 }
+.app-root {
+  position: relative;
+}
+
 .screen {
   width: 100%;
   height: 100vh;
@@ -98,7 +102,19 @@ a {
 .bg-image-right {
   right: 0;
 }
-
+.footer-links {
+  margin: 8px 0;
+  font-size: 14px;
+}
+.footer-icons {
+  display: flex;
+}
+ul.footer-icons li {
+  margin: 0 10px !important;
+}
+.footer-social {
+  color: var(--primary);
+}
 .card-sharp {
   background-color: #ffff;
   border: 1px solid #e0e0e0;
