--- a/src/App.css
+++ b/src/App.css
@@ -253,9 +253,18 @@ ul.footer-icons li {
   border: 1px solid var(--text-dark);
   border-radius: 4px;
   padding-left: 10px;
+}
+.text-field-icon-container {
+  position: relative;
   margin-top: 12px;
 }
-
+.text-field-icon {
+  color: var(--primary);
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 14px;
+}
 .para-center {
   text-align: center;
 }
@@ -555,3 +564,32 @@ span.sb-link-label.active {
 .content-footer-container {
   width: 100%;
 }
+.full.width {
+  width: 100%;
+}
+.full.height {
+  height: 100%;
+}
+.no.margin {
+  margin: 0 !important;
+}
+.no.padding {
+  padding: 0 !important;
+}
+
+/* .py-1 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.py-2 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.px-1 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.px-2 {
+  padding-left: 15px;
+  padding-right: 15px;
+} */
