--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,9 @@ a {
 .content-right {
   flex: 5;
 }
-
+.color-primary.faded {
+  color: var(--primary-faded);
+}
 .default-bg,
 .bg-content {
   height: 100%;
@@ -649,6 +651,20 @@ span.sb-link-label.active {
 }
 .width-700 {
   max-width: 700px;
+}
+.big-size {
+  font-size: 74px;
+}
+.bg.white.faded {
+  background-color: rgba(255, 255, 255, 0.35);
+}
+.p-4 {
+  padding: 40px;
+}
+.flex.center.all {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /* .py-1 {
   padding-top: 10px;
